--- a/Booksy/Booksy.csproj
+++ b/Booksy/Booksy.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Areas\Manager\Views\" />
+    <Folder Include="Areas\User\Views\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
